--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <P class="connect">LET'S CONNECT</P>
       <ul class="social-icon">
         <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-        <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+        <li><a href="www.linkedin.com/in/ranjith-kumar-0117d"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
         <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
         <li><a href="#"><i class="fa fa-github" aria-hidden="true"></i></a></li>  
       </ul>
